--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <section id="display-step-0" class="display-steps">
           <div class="display-borrower-inputs">
             <div>
-              <div class="legal-form">
+              <div class="legal-form" id="legal-display-1">
                 <div class="form-text">
                   <p>
                     <span id="display-borrower-legal-company-input-1">INPUT 1 LIMITED</span>, a company
@@ -307,7 +307,7 @@
                 </div>
               </div>
 
-              <div class="individual-form">
+              <div class="individual-form" id="individual-display-1">
                 <div class="form-text">
                   <p>
                     <span id="display-borrower-individual-firstname-input-1">INPUT 1 </span>
